--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mohammadAlshalabi/userlane-task#readme",
   "dependencies": {
-    "cypress": "^9.3.1"
+    "cypress": "^9.3.1",
+    "typescript": "^4.5.5"
   }
 }
