--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mohammadAlshalabi/userlane-task#readme",
   "dependencies": {
     "cypress": "^9.3.1",
+    "cypress-file-upload": "^5.0.8",
     "typescript": "^4.5.5"
   }
 }
