--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -3,7 +3,7 @@ on:
   push
 jobs:
   eslint:
-    name: "ESLint"
+    name: "Cypress"
     runs-on: "ubuntu-latest"
     timeout-minutes: 30
     steps:
